# yetbota

./: .gitignore  docker-compose.yml  feed-workflow.pptx
ai-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  go.mod  go.sum  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
ai-service/application/: chat_service.py  errors.py  interfaces.py
ai-service/application/rag/: build_prompt.py  parse_answer_json.py
ai-service/bootstrap/: container.py
ai-service/cmd/: main.go
ai-service/cmd/grpc/: server.go
ai-service/cmd/rest/: server.go
ai-service/data/: sample_chunks.jsonl
ai-service/domain/: chat_config.py  models.py
ai-service/drivers/config/: config.go  loader.go
ai-service/drivers/constants/: constants.go
ai-service/drivers/logger/: logger.go
ai-service/drivers/validator/: validator.go
ai-service/infra/: config.py
ai-service/infrastructure/: settings.py
ai-service/infrastructure/llm/: embedder.py  generator.py
ai-service/infrastructure/vector_store/: retriever.py
ai-service/interfaces/grpc/: genpath.py  rag_service.py  server.py
ai-service/interfaces/rest/: app.py  chat_router.py  health_router.py  schemas.py  version_router.py
ai-service/interfaces/rest/v1/: chat.py  version.py
ai-service/scripts/: ingest_weaviate.py
ai-service/src/: main.py
ai-service/src/application/: consult_assistant.py  delete_content.py  errors.py  ingest_content.py  screen_text.py
ai-service/tests/: conftest.py
ai-service/tests/unit/: test_assistant_grpc.py  test_assistant_route.py  test_chunker.py  test_consult_assistant.py  test_delete_content.py  test_domain_entities.py  test_gemini_embedder.py  test_ingest_content.py  test_ingest_worker.py  test_metrics.py  test_neo4j_graph.py  test_rabbitmq_consumer.py  test_rabbitmq_publisher.py  test_redis_consumer.py  test_redis_publisher.py  test_screen_text.py  test_screening_grpc.py  test_screening_route.py  test_settings.py  test_weaviate_store.py
common/: Makefile
(+379 files in other folders)
